@@ -3,6 +3,7 @@
 	* version 0.5.2
 	* added "s" and "a" mappings to extended hints mode for saving hint
 	  targets
+	* :back/:forward can use tabcompletion
 	* :undoall support, and tabcompletion for :undo <tab>
 	* new :redraw and Ctrl-L commands for forced redrawing of the screen
 	* added new 'laststatus' option and removed "s" value from 'guioptions'
